nagvis (1:1.6.4-2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Alexander Reichle-Schmehl <tolimar@debian.org>  Mon, 05 Mar 2012 16:02:29 +0100

nagvis (1:1.6.4-1) experimental; urgency=low

  * The "gone with the wind" release.
  * New upstream release (Closes: #659723, #638234)
  * Rework debian/* move to dh and quilt and (hopefully) easier generell
    packaging
  * Update package description:  Now also works with Icinga
  * Change Package dependencies:  Drop all ndo and mysql related stuff,
    as we want to use MK Livestatus
    * Using MK Livestatus obsoletes the database configuration
      (Closes: #626456)
    * That's now the best we can do to make NagVis work out of the box
      (Closes: #655064)
  * Update debian/copyright
  * removed patches/php5.3-deprecated-ereg.dpatch; applied upstream
  * removed patches/fix-get_class-object.dpatch; no longer needed
  * removed patches/visibility_magic-set-method.dpatch; no longer needed
  * Move example maps in separate nagvis-demos package

 -- Alexander Reichle-Schmehl <tolimar@debian.org>  Mon, 26 Sep 2011 16:29:25 +0200

nagvis (1:1.4.6-2) unstable; urgency=medium

  * Add myself to uploaders
  * Acknowledge NMU (Closes: #595313)
  * Only call ucf on purge if it's available (Closes: #620037)
    * Set urgency to medium due to RC bug fix
  * Set Path to gadget files in example configuration (via
    patches/config.dpatch) (Closes: #611909)
  * Properly set "Options FollowSymLinks" in the apache configuration
    (Closes: #632333)
  * Recommend real ndoutils package instead of the virtual one; no idea why
    there is a virtual one (Closes: #598953)
  * Remove previous maintainers from Uploaders.  Thanks to Hendrik and
    Wolfgang for all their work!
  * Actually install the documentation
  * Bump standards (no changes needed)
  * Add recommended targets to debian/rules

 -- Alexander Reichle-Schmehl <tolimar@debian.org>  Wed, 07 Sep 2011 16:47:25 +0200

nagvis (1:1.4.6-1.1) unstable; urgency=low
